<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="8dp"
        android:text="@string/share_title"
        android:textColor="#de000000"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:background="#e9e6e6"
        android:layout_height="1px"/>

    <LinearLayout
        android:paddingTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_share_qq"
            style="@style/ShareLinearLayoutStyle">

            <ImageView
                style="@style/ShareImageViewStyle"
                android:src="@drawable/ic_share_qq"/>

            <TextView
                style="@style/ShareTextViewStyle"
                android:text="@string/share_qq"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share_zone"
            style="@style/ShareLinearLayoutStyle">

            <ImageView
                style="@style/ShareImageViewStyle"
                android:src="@drawable/ic_share_zone"/>

            <TextView
                style="@style/ShareTextViewStyle"
                android:text="@string/share_qq_zone"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share_weibo"
            style="@style/ShareLinearLayoutStyle">

            <ImageView
                style="@style/ShareImageViewStyle"
                android:src="@drawable/ic_share_weibo"/>

            <TextView
                style="@style/ShareTextViewStyle"
                android:text="@string/share_weibo"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:paddingTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_share_we_chat"
            style="@style/ShareLinearLayoutStyle">

            <ImageView
                style="@style/ShareImageViewStyle"
                android:src="@drawable/ic_share_wechat"/>

            <TextView
                style="@style/ShareTextViewStyle"
                android:text="@string/share_wechat"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share_friend_circle"
            style="@style/ShareLinearLayoutStyle">

            <ImageView
                style="@style/ShareImageViewStyle"
                android:src="@drawable/ic_share_friend_circle"/>

            <TextView
                style="@style/ShareTextViewStyle"
                android:text="@string/share_friend_circle"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share_wx_favorite"
            style="@style/ShareLinearLayoutStyle">

            <ImageView
                style="@style/ShareImageViewStyle"
                android:padding="9dp"
                android:src="@drawable/ic_share_favorite"/>

            <TextView
                style="@style/ShareTextViewStyle"
                android:text="@string/share_wx_favorite"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:paddingTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_share_copy_link"
            style="@style/ShareLinearLayoutStyle">

            <ImageView
                style="@style/ShareImageViewStyle"
                android:padding="8dp"
                android:src="@drawable/ic_share_copy_link"/>

            <TextView
                style="@style/ShareTextViewStyle"
                android:text="@string/share_copy_link"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share_other"
            style="@style/ShareLinearLayoutStyle">

            <ImageView
                style="@style/ShareImageViewStyle"
                android:padding="10dp"
                android:src="@drawable/ic_share_other"/>

            <TextView
                style="@style/ShareTextViewStyle"
                android:text="@string/share_other"/>
        </LinearLayout>

        <LinearLayout
            style="@style/ShareLinearLayoutStyle">
        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bt_share_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:background="@drawable/bg_share_cancel"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="#de000000"
        android:textSize="16sp"/>

</LinearLayout>